Se corrigió la vista TableOfSeason para que mostrara correctamente la clasificacion

--- a/SoccerMVC/Views/Home/Index.cshtml
+++ b/SoccerMVC/Views/Home/Index.cshtml
@@ -7,12 +7,12 @@
 </head>
 <body>
 <div align="center">
-    <form method="POST" asp-action="TableOfSeason">
+    <form method="post" asp-action="TableOfSeason">
         <div style="padding-bottom: 2mm;">
             <input class="form-control" type="text" name="textNameUser" placeholder="name of user" style="color: cadetblue;"/>
         </div>
         <div style="padding-bottom: 2mm;">
-            <select class="form-control" >
+            <select class="form-control" name="country">
                 <option value="" style="color: cadetblue;">Choose an option</option>
                 <option value="mexico" style="color: cadetblue;">Mexico</option>
                 <option value="england" style="color: cadetblue;">England</option>
